2009-01-14  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Core.Gui.mdp:
	* MonoDevelop.Core.Gui.Dialogs/OptionsDialog.cs: Added a new collection
	which stores the objects modified by the options dialog, so they can
	be properly saved by the invoker.

2009-01-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Core.Gui.addin.xml: Registered exe/dll mime type (for
	assembly browser).

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Gui.mdp: Set correct target framework.

2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Core.Gui.mdp:
	* MonoDevelop.Core.Gui.Dialogs/MultiMessageDialog.cs:
	* gtk-gui/MonoDevelop.Core.Gui.Dialogs.MultiMessageDialog.cs: Added
	dialog which allows showing multiple messages at once.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Gui.mdp: Don't require a specific version of
	Mono.Addins.

2008-12-04  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.Core.Gui/DesktopApplication.cs : add a ctor. used by
	the new gio-based GnomePlatform code.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Gui.ProgressMonitoring/BaseProgressMonitor.cs:
	Implement new SuccessWithWarnings property.

2008-12-03  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Make it work for parallel builds.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Core.Gui/ResourceService.cs: Add licence header.

	* Makefile.am:
	* MonoDevelop.Core.Gui.mdp:
	* MonoDevelop.Core.Gui/ITextBufferStrategy.cs: Remove unused GPL file.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Core.Gui.mdp: Fix Makefile integration for AssemblyInfo.cs
	files.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AssemblyInfo.cs:
	* AssemblyInfo.cs.in: Add AssemblyInfo.cs files that are autogenerated
	from the addin manifests.
